--- a/package.json
+++ b/package.json
@@ -1,26 +1,37 @@
 {
-  "name": "mp3-player",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.2",
-    "@fortawesome/free-solid-svg-icons": "^6.1.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "classnames": "^2.3.1",
-    "next": "12.2.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sass": "^1.54.0",
-    "zingmp3-api-full": "^1.0.14"
-  },
-  "devDependencies": {
-    "eslint": "8.20.0",
-    "eslint-config-next": "12.2.3"
-  }
+    "name": "mp3-player",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "pretty": "prettier --write \"./**/*.{js,jsx,json}\""
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.1.2",
+        "@fortawesome/free-solid-svg-icons": "^6.1.2",
+        "@fortawesome/react-fontawesome": "^0.2.0",
+        "@reduxjs/toolkit": "^1.9.0",
+        "axios": "^1.1.3",
+        "classnames": "^2.3.1",
+        "next": "12.2.3",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-hook-form": "^7.39.1",
+        "react-redux": "^8.0.5",
+        "redux": "^4.2.0",
+        "sass": "^1.54.0",
+        "serverless-mysql": "^1.5.4",
+        "zingmp3-api-full": "^1.0.14"
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.13",
+        "eslint": "8.20.0",
+        "eslint-config-next": "12.2.3",
+        "postcss": "^8.4.18",
+        "prettier": "^2.7.1",
+        "tailwindcss": "^3.2.2"
+    }
 }
