--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@reduxjs/toolkit": "^1.9.0",
         "axios": "^1.1.3",
         "classnames": "^2.3.1",
+        "mysql2": "^2.3.3",
         "next": "12.2.3",
         "react": "18.2.0",
         "react-dom": "18.2.0",
